@@ -55,7 +55,8 @@ TAO::DCPS::DataLink::~DataLink()
 void
 TAO::DCPS::DataLink::resume_send ()
 {
-   this->send_strategy_->resume_send();
+   if (!this->send_strategy_->isDirectMode())
+     this->send_strategy_->resume_send();
 }
 
 //MJM: Include the return value meanings to the header documentation as
